--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
   adapter: mysql2
-  database: furima-38535_production
+  database: furima_38535_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
